--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   </div>
   <!-- button -->
   <div class="btnBox"> 
-    <button class="btn"><img src="img/blue_t.png" alt="t-shirt" class="imgBtn" width="30px"></button>
-    <button class="btn"><img src="img/blue_p.png" alt="pants" class="imgBtn" width="30px"></button>
-    <button class="btn"><img src="img/blue_s.png" alt="skirt" class="imgBtn" width="30px"></button>
-    <button class="btn colorBtn">blue</button>
-    <button class="btn colorBtn">yellow</button>
-    <button class="btn colorBtn">pink</button>
+    <button class="btn tBtn"><img src="img/blue_t.png" alt="t-shirt" class="imgBtn" width="30px"></button>
+    <button class="btn pBtn"><img src="img/blue_p.png" alt="pants" class="imgBtn" width="30px"></button>
+    <button class="btn sBtn"><img src="img/blue_s.png" alt="skirt" class="imgBtn" width="30px"></button>
+    <button class="btn colorBtn blueBtn">blue</button>
+    <button class="btn colorBtn yellowBtn">yellow</button>
+    <button class="btn colorBtn pinkBtn">pink</button>
   </div>
   <!-- scroll -->
   <ul class="items">
-    <li class="item">
+    <!-- <li class="item">
       <img src="img/pink_p.png" alt="pants" class="item_thumbnail">
       <span class="item_description">female, large</span>
-    </li>
+    </li> -->
   </ul>
 </body>
 
