--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- logo -->
   <div class="logo">
-    <img src="img/logo.png" alt="logo">
+    <button class="btn mainBtn"><img src="img/logo.png" alt="logo"></button>
   </div>
   <!-- button -->
   <div class="btnBox"> 
@@ -26,10 +26,6 @@
   </div>
   <!-- scroll -->
   <ul class="items">
-    <!-- <li class="item">
-      <img src="img/pink_p.png" alt="pants" class="item_thumbnail">
-      <span class="item_description">female, large</span>
-    </li> -->
   </ul>
 </body>
 
